# update-genie-auth-demo

./: .gitignore  LICENSE.md  README.md  requirements.txt
 vector-search/: requirements.txt  setup.py
apps-shell/: app.py  app.yaml  deploy_app.py  requirements.txt
apps-shell/app_components/dbsql/: app_frontend.py  app_functions.py
apps-shell/app_components/genie/: app_frontend.py  app_functions.py
apps-shell/app_components/home/: home_frontend.py
apps-shell/assets/: style.css
apps-shell/components/home/: home.py
apps-shell/components/tables/: functions.py  ui_tables_edit.py  ui_tables_read.py
auth-demo/: OBO_Genie_Implementation_Guide.md  README.md  app.py  auth.py  pyproject.toml  requirements.txt  sql.py  utils.py
auth-demo/callbacks/: auth_callbacks.py  genie_callbacks.py  message_callbacks.py  sql_callbacks.py
vector-search/: README.md  app.py  app.yaml
